<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_theme">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/audit_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical">


        <ABS_CUSTOM_VIEW.TextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/mText_reset_password"
            android:textAllCaps="true"
            android:textColor="@color/abs_text_color_blacktuch"
            android:textSize="24dp" />

        <ABS_CUSTOM_VIEW.TextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/mText_enter_password_here"
            android:textAllCaps="true"
            android:textColor="@color/abs_audit_blue"
            android:textSize="16dp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_unlock" />

                <ABS_CUSTOM_VIEW.EditTextRegular
                    android:id="@+id/mEditOldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:hint="@string/mText_old_password"
                    android:padding="3dp"
                    android:textColor="@color/abs_text_color_blacktuch"
                    android:textColorHint="@color/abs_text_color_blacktuch" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/abs_text_color_blacktuch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_unlock" />

                <ABS_CUSTOM_VIEW.EditTextRegular
                    android:id="@+id/mEditNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:hint="@string/mTextTitle_new_password"
                    android:padding="3dp"
                    android:textColor="@color/abs_text_color_blacktuch"
                    android:textColorHint="@color/abs_text_color_blacktuch" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/abs_text_color_blacktuch" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_unlock" />

                <ABS_CUSTOM_VIEW.EditTextRegular
                    android:id="@+id/mEditConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:hint="@string/mTextTitle_confirm_password"
                    android:padding="3dp"
                    android:textColor="@color/abs_text_color_blacktuch"
                    android:textColorHint="@color/abs_text_color_blacktuch" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/abs_text_color_blacktuch" />






            <RelativeLayout
                android:id="@+id/mLayoutSubmit"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/abs_audit_blue">

                <ABS_CUSTOM_VIEW.TextViewSemiBold
                    android:id="@+id/mTextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/mTextTitle_submit"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
