<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mImgLogo"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/audit_logo" />

        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ABS_CUSTOM_VIEW.TextViewSemiBold
                android:id="@+id/mTxtAuditorLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/mTextTitle_auditor"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <ABS_CUSTOM_VIEW.TextViewSemiBold
                android:id="@+id/mTxtInspectorLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/mTextTitle_inspector"
                android:textAllCaps="true"
                android:textColor="@color/abs_textcolor_gray"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <View
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/mViewAuditor"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"/>

            <View
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/mViewInspector"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_user" />

                <ABS_CUSTOM_VIEW.EditTextRegular
                    android:id="@+id/mEditUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/mEditHint_username"
                    android:padding="3dp"
                    android:textColor="@color/abs_text_color_blacktuch"
                    android:textColorHint="@color/abs_text_color_blacktuch" />
            </LinearLayout>

            <View
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/abs_text_color_blacktuch" />


            <LinearLayout
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_unlock" />

                <ABS_CUSTOM_VIEW.EditTextRegular
                    android:id="@+id/mEditPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    android:hint="@string/mEditHint_password"
                    android:padding="3dp"
                    android:textColor="@color/abs_text_color_blacktuch"
                    android:textColorHint="@color/abs_text_color_blacktuch" />
            </LinearLayout>

            <View
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/abs_text_color_blacktuch" />






            <RelativeLayout
                android:id="@+id/mLayoutSignIn"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_corner_signin_button">

                <ABS_CUSTOM_VIEW.TextViewSemiBold
                    android:id="@+id/mTextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:text="@string/mTextTitle_login"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </RelativeLayout>

            <ABS_CUSTOM_VIEW.TextViewSemiBold
                android:id="@+id/mTxtForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/mTextTitle_forget"
                android:textColor="@color/abs_textcolor_gray"
                android:textSize="18dp" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
